[gd_scene load_steps=2 format=3 uid="uid://b2hq61j31vesa"]

[ext_resource type="Script" path="res://enemies/enemy_base/enemy_base.gd" id="1_cfmw3"]

[node name="EnemyBase" type="CharacterBody2D"]
script = ExtResource("1_cfmw3")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_screen_exited"]
